<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jitenshas.matematicasapestan.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:layout_constraintHorizontal_bias="1.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cual_es_el"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ptext"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/ptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresa_el_porcentaje"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ntext"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="58dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/ntext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresa_un_numero"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/calcular"
        app:layout_constraintRight_toRightOf="@+id/ptext"
        android:layout_marginTop="92dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="94dp"
        app:layout_constraintLeft_toLeftOf="@+id/ptext"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="29dp"
        android:layout_height="34dp"
        android:text="@string/ed"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/calcular"
        android:layout_marginEnd="17dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="195dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="195dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ptext"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="17dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ptext"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/ptext"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ptext" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/calcular"
        android:textColor="@android:color/background_light"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="@+id/ntext"
        android:layout_marginBottom="87dp"
        android:layout_marginRight="54dp" />

</android.support.constraint.ConstraintLayout>
